--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
+    implementation 'com.tomergoldst.android:tooltips:1.0.10'
 }
 apply plugin: 'com.google.gms.google-services'
