--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
     implementation 'com.tomergoldst.android:tooltips:1.0.10'
+    implementation 'com.github.shts:StoriesProgressView:3.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
