--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,6 @@ dependencies {
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
     implementation 'com.tomergoldst.android:tooltips:1.0.10'
     implementation 'com.github.shts:StoriesProgressView:3.0.0'
-    implementation 'com.github.rubensousa:gravitysnaphelper:2.0'
+    implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
 }
 apply plugin: 'com.google.gms.google-services'
